src/test/ui/or-patterns/issue-69875-should-have-been-expanded-earlier-non-exhaustive.stderr
error[E0005]: refutable pattern in local binding: `i32::MIN..=-1_i32` and `3_i32..=i32::MAX` not covered
  --> $DIR/issue-69875-should-have-been-expanded-earlier-non-exhaustive.rs:4:9
   |
LL |     let 0 | (1 | 2) = 0;
   |         ^^^^^^^^^^^ patterns `i32::MIN..=-1_i32` and `3_i32..=i32::MAX` not covered
   |
   = note: `let` bindings require an "irrefutable pattern", like a `struct` or an `enum` with only one variant
   = note: for more information, visit https://doc.rust-lang.org/book/ch18-02-refutability.html
   = note: the matched value is of type `i32`
help: you might want to use `if let` to ignore the variant that isn't matched
   |
LL |     if let 0 | (1 | 2) = 0 { /* */ }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0004]: non-exhaustive patterns: `i32::MIN..=-1_i32` and `3_i32..=i32::MAX` not covered
  --> $DIR/issue-69875-should-have-been-expanded-earlier-non-exhaustive.rs:5:11
   |
LL |     match 0 {
   |           ^ patterns `i32::MIN..=-1_i32` and `3_i32..=i32::MAX` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `i32`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0004, E0005.
For more information about an error, try `rustc --explain E0004`.
